# EASYVALID_DATA_VALIDATOR

./: README.md  pyproject.toml
easyvalid_data_validator/: common.py  constraints.py  validator.py
easyvalid_data_validator/customexceptions/: array.py  common.py  integer.py  string.py
easyvalid_data_validator/datacheckers/: array.py  boolean_checker.py  dictionary_checker.py  float.py  integer.py  string_checker.py
tests/: test_common.py  test_validate_json_data.py  test_validate_json_member.py  test_validator.py
tests/test_datacheckers/: test_array.py  test_array_checker.py  test_boolean.py  test_boolean_checker.py  test_dictionary.py  test_dictionary_checker.py  test_float.py  test_float_checker.py  test_integer.py  test_integer_checker.py  test_string.py  test_string_checker.py
